src/index.css
@font-face {
    font-family: 'CookieRun';
    src: url('/fonts/CookieRun Regular.woff2') format('woff2');
}

body {
    margin: 0;
    font-family: 'CookieRun', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-image: url("/images/blue-check-back.jpg");
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

#root {
    height: 100vh;
    width: 100vw;
    background-position: left top;
    background-size: auto;
    background-repeat: repeat;
    background-attachment: scroll;
    overflow: hidden;
}

